[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
derive = "1.0.0"
docx-rust = "0.1.8"
ego-tree = "=0.9.0"
encoding_rs = "0.8.35"
futures = "0.3.31"
reqwest = "0.12.9"
reqwest_cookie_store = "0.8.0"
scraper = "0.21.0"
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
